[gd_scene load_steps=2 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 1148.08
margin_top = 214.248
margin_right = 1188.08
margin_bottom = 228.248
text = "25"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
margin_left = 1074.85
margin_top = 307.36
margin_right = 1226.85
margin_bottom = 321.36
text = "Click Start Game to play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
margin_left = 1080.0
margin_top = 266.0
margin_right = 1221.0
margin_bottom = 286.0
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
